<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackground"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/default_content_desc"
        android:src="@drawable/login_black_no_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/reponse_bold_rounded"
        android:text="@string/login_view_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/keeperTextColor"

        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/reponse_bold_rounded"
                android:labelFor="@id/userLoginText"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:text="@string/login_text_title"
                android:textColor="@color/keeperTextColor"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/userLoginText"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:autofillHints="emailAddress"
                android:background="@android:drawable/editbox_background"

                android:inputType="textEmailAddress"
                android:outlineProvider="bounds"
                android:textColor="@color/editTextColor" />

            <TextView
                android:id="@+id/loginErrorHintText"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:ems="10"
                android:fontFamily="@font/reponse_bold_rounded"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:textColor="@color/keeperErrorTextColor"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/reponse_bold_rounded"
                android:labelFor="@id/userPasswordText"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:text="@string/password_text_title"
                android:textColor="@color/keeperTextColor"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/userPasswordText"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:autofillHints="password"
                android:background="@android:drawable/editbox_background"
                android:inputType="textPassword"
                android:textColor="@color/editTextColor" />

            <TextView
                android:id="@+id/passwordErrorHintText"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:ems="10"
                android:fontFamily="@font/reponse_bold_rounded"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:textColor="@color/keeperErrorTextColor"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="2dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp">

            <Button
                android:id="@+id/loginButton"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_button_states"
                android:fontFamily="@font/keeper_font"
                android:text="@string/login_view_button_label"
                android:textColor="@color/keeperTextColor"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="0dp"
            android:paddingTop="50dp"
            android:paddingEnd="0dp">

            <TextView
                android:id="@+id/createAccountLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/keeper_font"
                android:text="@string/create_account_label"
                android:textColorLink="@color/keeperYellowColor"
                android:textColor="@color/keeperTextColor" />

        </LinearLayout>

        <TextView
            android:id="@+id/needHelpLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/keeper_font"
            android:paddingTop="30dp"
            android:text="@string/need_help_label"
            android:textColor="@color/keeperTextColor"
            android:textColorLink="@color/keeperYellowColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:paddingStart="2dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp">

            <Button
                android:id="@+id/enterpriseLoginButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/login_button_border"
                android:enabled="false"
                android:fontFamily="@font/keeper_font"
                android:text="@string/enterprise_login_button_label"
                android:textColor="@color/keeperDisabledTextColor"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/keeper_font"
                android:paddingTop="20dp"
                android:text="@string/keeper_security_legal_label"
                android:textColor="@color/keeperDisabledTextColor"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>